$Id$

2014-12-08  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Hitachi Travelstar 5K500.B: *SA00 variant
	- Hitachi/HGST Travelstar Z5K500: Hitachi variant, Apple OEM
	- HGST Travelstar 5K1000
	- HGST Travelstar 5K1500
	- Hitachi Travelstar 7K500: *A360 variant
	- Hitachi CinemaStar 5K320
	- Hitachi Deskstar 7K1000.C: SATA 6Gb/s variants
	- HGST Deskstar NAS
	- Hitachi/HGST Ultrastar 7K4000: Rename, add HGST
	- HGST MegaScale 4000

2014-12-07  Christian Franke  <franke@computer.org>

	os_linux.cpp: Fix fd leak in megasas_dcmd_cmd().  Found by cppcheck.

2014-12-07  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Crucial/Micron MX100/M500/M510/M550/M600 Client SSDs: M600 EE variant
	- SandForce Driven SSDs: Kingston KC300 180GB
	- Indilinx Barefoot 3 based SSDs: OCZ Vector 150
	- JMicron based SSDs: Kingston SSDNow V+
	- Plextor M3/M5 (Pro) Series SSDs: M5P
	- Samsung based SSDs: 850 PRO, SM853T Series

2014-12-06  Christian Franke  <franke@computer.org>

	Makefile.am: Add quotes to parameters of INSTALL commands to allow path
	names with spaces (this is supported since automake 1.8).
	update-smart-drivedb.in: Add quotes to SMARTCTL variable (ticket #502).

2014-11-30  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Crucial/Micron RealSSD m4/C400/P400: C400 *MAM variant
	- Crucial/Micron MX100/M500/M510/M550/M600 Client SSDs: Rename,
	add Crucial M500/M550, Micron M600
	- SandForce Driven SSDs: ADATA SX900 (ticket #490), Mushkin Atlas
	- Intel 311/313 Series SSDs: Rename, add 311 Series

2014-11-30  Christian Franke  <franke@computer.org>

	drivedb.h: USB: Prolific PL2571, PL2771, PL2775 (0x067b:0x2.7.)
	(ticket #499).
	smartctl.8.in, smartd.conf.5.in: Update '-d usbprolific' documentation.

2014-11-29  Christian Franke  <franke@computer.org>

	smartctl.8.in, smartd.8.in, smartd.conf.5.in, update-smart-drivedb.8.in:
	Add package title to page header.  Move PACKAGE VERSION section to bottom
	of page.  Remove SVN ID section header.
